--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -20,6 +20,22 @@ spec:
         ports:
         - containerPort: 80
 
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: redis
+  namespace: default
+spec:
+  replicas: 1
+  revisionHistoryLimit: 3
+  template:
+    metadata:
+      labels:
+        app: redis
+    spec:
+      containers:
       - name: redis
         image: redis:alpine
         ports:
