--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -9,3 +9,19 @@ spec:
     targetPort: 80
   selector:
     app: guestbook-ui
+
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: angular-service
+spec:
+  type: ClusterIP ### may be ommited as it is a default type
+  selector:
+    name: redis ### should match your labels defined for your angular pods
+  ports:
+  - protocol: TCP
+    targetPort: 6379 ### port your angular app listens on
+    port: 6379 ### port on which you want to expose it within your cluster
