--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -16,7 +16,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: angular-service
+  name: redis
+  namespace: default
 spec:
   type: ClusterIP ### may be ommited as it is a default type
   selector:
