--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -57,5 +57,5 @@ spec:
           name: "redis-conf"
           items:
             - key: "redis.conf"
-              path: "redis.conf"
+              path: "./redis.conf"
 
